# pico_esp32host_driver

./: .gitmodules  CMakeLists.txt  README.md  pinconfig.h
esp_submodules/extra_components/: CMakeLists.txt  readme.txt
esp_submodules/extra_components/esp_event/: default_event_loop.c
esp_submodules/extra_components/esp_event/include/: esp_event.h
esp_submodules/extra_components/esp_netif/include/: esp_netif_ip_addr.h
esp_submodules/extra_components/esp_netif/lwip/: esp_netif_br_glue.c
esp_submodules/extra_components/esp_wifi/include/: esp_wifi.h  esp_wifi_types.h
esp_submodules/extra_components/esp_wifi/include/esp_private/: esp_wifi_private.h  wifi.h
esp_submodules/extra_components/esp_wifi/src/: smartconfig_ack.c  wifi_default.c  wifi_netif.c
esp_submodules/extra_components/esp_wifi_remote/: esp_wifi_remote.c  wifi_remote_init.c  wifi_remote_net.c  wifi_remote_rpc.c
esp_submodules/extra_components/esp_wifi_remote/include/: esp_wifi_remote.h
esp_submodules/extra_components/log/: esp_log.c  esp_log.h  log_linked_list.c  tag_log_level.c
esp_submodules/extra_components/lwip/apps/dhcpserver/: dhcpserver.c
esp_submodules/extra_components/lwip/include/lwip/: netdb.h  sockets.h
esp_submodules/extra_components/lwip/port/debug/: lwip_debug.c
esp_submodules/extra_components/lwip/port/include/: lwipopts.h
esp_submodules/extra_components/mempool/: mempool.c  mempool.h
esp_submodules/extra_components/utils/: esp_err.h  esp_mac.h
freertos/: esp_hosted_bt_config.h  esp_hosted_config.h  esp_hosted_ota.c  esp_hosted_ota.h  esp_hosted_transport_config.c  esp_hosted_transport_config.h  esp_hosted_wifi_config.h  os_header.h  os_wrapper.c  os_wrapper.h  sdkconfig.h  spi_wrapper.c  spi_wrapper.h
freertos/platform_include/: endian.h
freertos/platform_include/sys/: unistd.h
